--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/styles.min.css" />
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
 
-    <title>Bryan Smith</title>
+    <title>Elijah Hobzar</title>
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,12 +14,12 @@
     <link rel="canonical" href="/" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Bryan Smith" />
+    <meta property="og:title" content="Elijah Hobzar" />
     <meta property="og:site_name" content="Personal Website" />
     <meta property="og:url" content="https://multikitty.onrender.com" />
     <meta property="og:image" content="https://multikitty.onrender.com/images/selfie.jpg" />
     <meta property="og:description" content="Full Stack Developer, Blockchain Developer, Casino Game Developer" />
-    <meta name="twitter:title" content="Bryan Smith" />
+    <meta name="twitter:title" content="Elijah Hobzar" />
     <meta name="twitter:description" content="Full Stack Developer, Blockchain Developer, Casino Game Developer" />
     <meta name="twitter:image" content="https://multikitty.onrender.com/images/selfie.jpg" />
     <meta name="twitter:card" content="summary" />
