--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/styles.min.css" />
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
 
-    <title>Elijah Hobzar</title>
+    <title>Adam Baze</title>
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
